--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,14 @@
   "name": "Lightshot Hopper",
   "version": "1.0",
 
+  "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png",
+    "512": "icons/512.png"
+  },
+
   "background": {
     "persistent": false,
     "scripts": ["background.js"]
