Implement Grunt build system
Restructure working tree
Update manifest to reflect working tree changes
Add Grunt
Update .gitignore to ignore npm folder and more vim files
Update .gitignore to ignore private and automatically generated build/ directory
Add chrome store icon

--- a/manifest.json
+++ b/manifest.json
@@ -13,11 +13,11 @@
 
   "background": {
     "persistent": false,
-    "scripts": ["background.js"]
+    "scripts": ["js/background.js"]
   },
   "content_scripts": [{
     "matches": ["*://prntscr.com/*", "*://*.prntscr.com/*", "*://prnt.sc/*", "*://*.prnt.sc/*"],
-    "js": ["content.js"]
+    "js": ["js/content.js"]
   }],
   "browser_action": {
     "default_title": "Lightshot Hopper"
